--- a/README.org
+++ b/README.org
@@ -75,6 +75,14 @@ its content.
 
 ** Junio 2025
 
+*** 05-Jun-25
++ [[https://b-mehta.github.io/ABC-Exceptions/][Exceptional set in the abc conjecture (in Lean)]]. ~ Jared Duker Lichtman, Bhavik Mehta. #ITP #LeanProver #Math
++ [[https://blog.atlascomputing.org/p/ide-for-validating-specifications][IDE for validating specifications]]. ~ Evan Miyazono, Daniel Windham, Alexandre Rademaker. #ITP #LeanProver
++ [[https://www.isa-afp.org/entries/FaithfulPMLinHOL.html][Faithful logic embeddings in HOL — Deep and shallow (Isabelle/HOL dataset)]]. ~ Christoph Benzmüller. #ITP #IsabelleHOL
++ [[https://www.isa-afp.org/entries/MLSSmf_to_MLSS.html][A verified reduction algorithm from MLSSmf to MLSS]]. ~ Yiran Duan, Lukas Stevens. #ITP #IsabelleHOL #Math
++ [[https://youtu.be/9bb9QzxEKWo][David Poole on knowledge graphs and relational learning]]. #AI #LogicProgramming
++ [[https://jaalonso.github.io/vestigium/posts/2025/06/05-ia_y_matematicas-presente_y_futuro/][IA y matemáticas (presente y futuro)]]. #IA #Matemáticas
+
 *** 04-Jun-25
 + [[https://raw.githubusercontent.com/leanprover-community/mathematics_in_lean/master/mathematics_in_lean.pdf][Mathematics in Lean (Release v4]].19.0). ~ Jeremy Avigad, Patrick Massot. #ITP #LeanProver #Math
 + [[https://lean-lang.org/functional_programming_in_lean/][Functional programming in Lean]]. ~ David Thrane Christiansen. #ITP #LeanProver #FunctionalProgramming
