--- a/README.org
+++ b/README.org
@@ -75,6 +75,9 @@ its content.
 
 ** Junio 2025
 
+*** 08-Jun-25
++ [[https://ml-site.cdn-apple.com/papers/the-illusion-of-thinking.pdf][The illusion of thinking: Understanding the strengths and limitations of reasoning models via the lens of problem complexity]]. ~ Parshin Shojaee et als. #LLMs #Reasoning
+
 *** 07-Jun-25
 + [[https://www.newscientist.com/article/2482461-the-bizarre-story-of-a-maths-proof-that-is-only-true-in-japan/][The bizarre story of a maths proof that is only true in Japan]]. ~ Jacob Aron. #Math
 
